Authentification setup and ms notes setup